feat: Add Work in USA page with comprehensive career information
User Request:
- 사용자가 https://www.studyinkorea.go.kr/ko/work/main.do 페이지를 참고하여 'Work in USA' 페이지를 만들어 달라고 요청함

Implementation Summary:
1. Created WorkInUSA.tsx component (422 lines) with:
   - Hero section with career opportunities badge and CTAs
   - Main categories: Employment info, Work visa system, Internships, Job openings
   - Additional information cards linking to other resources
   - Success stories section with 3 YouTube video embeds
   - Job platforms section featuring 8 major US employment sites (LinkedIn, Indeed, Glassdoor, Handshake, USA Jobs, AngelList, ZipRecruiter, Monster)
   - Career tips section with 6 essential strategies (networking, resume, skills, interview, LinkedIn optimization, timing)
   - Notice banner about 2024 International Student Job Fair
   - CTA section encouraging user signup and AI chat

2. Added workInUSA translations to all 13 languages:
   - English (en.json) - Base translations
   - Korean (ko.json) - 한국어 번역
   - Chinese (zh.json) - 简体中文翻译
   - Japanese (ja.json) - 日本語翻訳
   - Vietnamese (vi.json) - Bản dịch tiếng Việt
   - Mongolian (mn.json) - Монгол орчуулга
   - Arabic (ar.json) - الترجمة العربية
   - Hindi (hi.json) - हिंदी अनुवाद
   - Spanish (es.json) - Traducción al español
   - French (fr.json) - Traduction française
   - German (de.json) - Deutsche Übersetzung
   - Russian (ru.json) - Русский перевод
   - Thai (th.json) - การแปลภาษาไทย

3. Updated routing configuration:
   - Added import for WorkInUSA component in App.tsx
   - Added route: /work-in-usa → WorkInUSA component
   - Positioned before the catch-all '*' route

4. Updated Header navigation:
   - Changed workInUSA nav item href from '#' to '/work-in-usa'
   - Navigation link now active and functional

Technical Details:
- Component uses WorkCard with gradient backgrounds (blue, emerald, purple, amber)
- Icons from lucide-react: Briefcase, FileText, GraduationCap, Building2, etc.
- Responsive de

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -349,5 +349,128 @@
       "planStudies": "خطط دراستك",
       "askQuestions": "اطرح الأسئلة"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "الفرص المهنية",
+      "title": "العمل في الولايات المتحدة",
+      "subtitle": "من الدراسة إلى المهنة - رحلتك نحو النجاح",
+      "description": "نقدم معلومات التوظيف وخدمات البحث عن وظائف لمساعدة الطلاب الدوليين على الاستعداد والعثور على وظائف في الولايات المتحدة.",
+      "cta": "ابدأ الآن",
+      "viewJobs": "عرض الوظائف المتاحة"
+    },
+    "sections": {
+      "employment": "التوظيف في الولايات المتحدة",
+      "system": "نظام تأشيرة العمل",
+      "internship": "التدريب والخبرة",
+      "recruitment": "الوظائف المتاحة",
+      "platforms": "منصات التوظيف",
+      "tips": "نصائح مهنية"
+    },
+    "mainTitle": "دعم مهني للطلاب الدوليين",
+    "mainSubtitle": "معلومات توظيف شاملة وخدمات مهنية لنجاحك",
+    "categories": {
+      "employment": {
+        "title": "التوظيف في الولايات المتحدة",
+        "desc": "معلومات أساسية للطلاب الدوليين الباحثين عن عمل في الولايات المتحدة، بما في ذلك عمليات التحضير للوظائف والإرشاد المهني."
+      },
+      "foreignerSystem": {
+        "title": "نظام تأشيرة العمل",
+        "desc": "تحقق من معلومات الأهلية للتوظيف بدوام كامل وجزئي، بما في ذلك متطلبات OPT و CPT وتأشيرة H-1B."
+      },
+      "internship": {
+        "title": "التطوع والخبرة الصناعية",
+        "desc": "خلق فرص الإنجاز من خلال التبادل الثقافي والخبرة العملية عبر التطوع والتدريب."
+      },
+      "recruitment": {
+        "title": "الوظائف المتاحة",
+        "desc": "نساعدك في العثور على وظائف من خلال منصات التوظيف الرئيسية بما في ذلك LinkedIn و Indeed ومراكز التوظيف الجامعية."
+      }
+    },
+    "additionalTitle": "مزيد من معلومات الدراسة بالخارج",
+    "additional": {
+      "scholarships": {
+        "title": "دعم المنح الدراسية المتنوعة",
+        "desc": "تحقق من المنح الدراسية من حكومة الولايات المتحدة والشركات والمدارس الفردية للطلاب الدوليين."
+      },
+      "consultation": {
+        "title": "استشارة AI Kori عبر الإنترنت",
+        "desc": "نجيب بسرعة على استفساراتك."
+      },
+      "schoolSearch": {
+        "title": "ابحث عن جامعتك وتخصصك",
+        "desc": "ابحث حسب اسم الجامعة أو التخصص للعثور على معلومات المدارس المهتمة في لمحة."
+      }
+    },
+    "stories": {
+      "title": "قصص النجاح",
+      "subtitle": "تعلم من كبار السن الذين عثروا بنجاح على عمل في الولايات المتحدة",
+      "video1": {
+        "title": "معرض الوظائف 2024 للطلاب الدوليين",
+        "description": "استشارة مهنية فردية تدعم أنشطة التوظيف في الولايات المتحدة.",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "الإرشاد المهني من كبار السن",
+        "description": "استمع إلى قصص التوظيف الحية من الموجهين من مختلف البلدان.",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "معرض المواهب العالمية 2024",
+        "description": "استشارات التوظيف الفردية، محاضرات المهنية من كبار السن، جلسات توظيف الشركات والمزيد.",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "منصات البحث عن الوظائف",
+    "platformsSubtitle": "اعثر على فرص العمل من خلال منصات التوظيف الرائدة في الولايات المتحدة",
+    "platforms": {
+      "linkedin": "الشبكات المهنية والبحث عن وظائف",
+      "indeed": "قوائم وظائف شاملة",
+      "glassdoor": "مراجعات الشركات والرواتب",
+      "handshake": "خدمات التوظيف الجامعية",
+      "usajobs": "وظائف الحكومة الأمريكية",
+      "angellist": "وظائف الشركات الناشئة والتقنية",
+      "ziprecruiter": "مطابقة وظائف بالذكاء الاصطناعي",
+      "monster": "موارد مهنية ووظائف"
+    },
+    "tipsTitle": "نصائح النجاح المهني",
+    "tipsSubtitle": "استراتيجيات أساسية للطلاب الدوليين الباحثين عن عمل في الولايات المتحدة",
+    "tips": {
+      "networking": {
+        "title": "بناء شبكتك",
+        "desc": "احضر معارض الوظائف، انضم إلى الجمعيات المهنية، وتواصل مع الخريجين لتوسيع شبكتك المهنية."
+      },
+      "resume": {
+        "title": "أتقن سيرتك الذاتية",
+        "desc": "أنشئ سيرة ذاتية على الطريقة الأمريكية تبرز الإنجازات والمهارات والنتائج القابلة للقياس ذات الصلة بالوظائف المستهدفة."
+      },
+      "skills": {
+        "title": "طور المهارات المطلوبة",
+        "desc": "ركز على المهارات التقنية وقدرات الاتصال والمعرفة الخاصة بالصناعة التي يقدرها أصحاب العمل الأمريكيون."
+      },
+      "interview": {
+        "title": "أتقن المقابلات",
+        "desc": "تدرب على أسئلة المقابلة الشائعة والمقابلات السلوكية ودراسات الحالة. أعد أسئلة مدروسة للمحاورين."
+      },
+      "linkedin": {
+        "title": "تحسين ملف LinkedIn",
+        "desc": "أنشئ ملفًا احترافيًا بكلمات رئيسية وتوصيات ومشاركة نشطة لجذب المجندين."
+      },
+      "timing": {
+        "title": "ابدأ مبكرًا",
+        "desc": "ابدأ البحث عن وظيفة قبل 6-9 أشهر من التخرج. العديد من الشركات لديها جداول زمنية محددة للتوظيف الدولي."
+      }
+    },
+    "notice": {
+      "title": "معرض الوظائف 2024 للطلاب الدوليين",
+      "description": "قابل المواهب العالمية الباحثة عن العمل في الولايات المتحدة! استشارات التوظيف الفردية، محاضرات التوظيف من كبار السن، جلسات الشركات، وبرامج متنوعة في انتظارك.",
+      "cta": "تعلم المزيد"
+    },
+    "cta": {
+      "title": "هل أنت مستعد لإطلاق مهنتك؟",
+      "description": "ابدأ رحلتك المهنية في الولايات المتحدة بدعم كامل",
+      "signup": "سجل الآن",
+      "chat": "دردش مع مستشار الذكاء الاصطناعي"
+    }
   }
 }
