--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -349,5 +349,128 @@
       "planStudies": "अपनी पढ़ाई की योजना बनाएं",
       "askQuestions": "प्रश्न पूछें"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "कैरियर के अवसर",
+      "title": "अमेरिका में काम",
+      "subtitle": "शिक्षा से करियर तक - सफलता की ओर आपकी यात्रा",
+      "description": "हम अंतर्राष्ट्रीय छात्रों को अमेरिका में करियर के लिए तैयार होने और खोजने में मदद करने के लिए रोजगार जानकारी और नौकरी खोज सेवाएं प्रदान करते हैं।",
+      "cta": "शुरू करें",
+      "viewJobs": "नौकरी रिक्तियां देखें"
+    },
+    "sections": {
+      "employment": "अमेरिका में रोजगार",
+      "system": "कार्य वीजा प्रणाली",
+      "internship": "इंटर्नशिप और अनुभव",
+      "recruitment": "नौकरी रिक्तियां",
+      "platforms": "नौकरी प्लेटफॉर्म",
+      "tips": "करियर सुझाव"
+    },
+    "mainTitle": "अंतर्राष्ट्रीय छात्र करियर सहायता",
+    "mainSubtitle": "आपकी सफलता के लिए व्यापक रोजगार जानकारी और करियर सेवाएं",
+    "categories": {
+      "employment": {
+        "title": "अमेरिका में रोजगार",
+        "desc": "अमेरिका में रोजगार चाहने वाले अंतर्राष्ट्रीय छात्रों के लिए आवश्यक जानकारी, जिसमें नौकरी की तैयारी प्रक्रियाएं और करियर मार्गदर्शन शामिल हैं।"
+      },
+      "foreignerSystem": {
+        "title": "कार्य वीजा प्रणाली",
+        "desc": "पूर्णकालिक और अंशकालिक रोजगार के लिए पात्रता जानकारी की जांच करें, जिसमें OPT, CPT और H-1B वीजा आवश्यकताएं शामिल हैं।"
+      },
+      "internship": {
+        "title": "स्वयंसेवा और उद्योग अनुभव",
+        "desc": "स्वयंसेवा और इंटर्नशिप के माध्यम से सांस्कृतिक आदान-प्रदान और व्यावहारिक अनुभव के माध्यम से उपलब्धि के अवसर बनाएं।"
+      },
+      "recruitment": {
+        "title": "नौकरी रिक्तियां",
+        "desc": "हम LinkedIn, Indeed और विश्वविद्यालय करियर केंद्रों सहित प्रमुख रोजगार प्लेटफार्मों के माध्यम से नौकरी खोजने में आपकी मदद करते हैं।"
+      }
+    },
+    "additionalTitle": "अधिक विदेश में अध्ययन जानकारी",
+    "additional": {
+      "scholarships": {
+        "title": "विभिन्न छात्रवृत्ति सहायता",
+        "desc": "अंतर्राष्ट्रीय छात्रों के लिए अमेरिकी सरकार, निगमों और व्यक्तिगत स्कूलों से छात्रवृत्ति की जांच करें।"
+      },
+      "consultation": {
+        "title": "AI Kori ऑनलाइन परामर्श",
+        "desc": "हम आपकी पूछताछ का शीघ्रता से उत्तर देते हैं।"
+      },
+      "schoolSearch": {
+        "title": "अपना विश्वविद्यालय और प्रमुख खोजें",
+        "desc": "रुचि के स्कूलों के बारे में एक नज़र में जानकारी खोजने के लिए विश्वविद्यालय या प्रमुख नाम से खोजें।"
+      }
+    },
+    "stories": {
+      "title": "सफलता की कहानियां",
+      "subtitle": "उन वरिष्ठों से सीखें जिन्होंने अमेरिका में सफलतापूर्वक रोजगार पाया",
+      "video1": {
+        "title": "अंतर्राष्ट्रीय छात्रों के लिए 2024 नौकरी मेला",
+        "description": "अमेरिका में रोजगार गतिविधियों का समर्थन करने वाला 1:1 करियर परामर्श।",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "वरिष्ठों द्वारा करियर मेंटरिंग",
+        "description": "विभिन्न देशों के मेंटर्स से जीवंत रोजगार कहानियां सुनें।",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "2024 ग्लोबल टैलेंट फेयर",
+        "description": "1:1 भर्ती परामर्श, वरिष्ठ करियर व्याख्यान, कंपनी भर्ती ब्रीफिंग और बहुत कुछ।",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "नौकरी खोज प्लेटफॉर्म",
+    "platformsSubtitle": "अग्रणी अमेरिकी रोजगार प्लेटफार्मों के माध्यम से नौकरी के अवसर खोजें",
+    "platforms": {
+      "linkedin": "पेशेवर नेटवर्किंग और नौकरी खोज",
+      "indeed": "व्यापक नौकरी सूचियां",
+      "glassdoor": "कंपनी समीक्षा और वेतन",
+      "handshake": "विश्वविद्यालय करियर सेवाएं",
+      "usajobs": "अमेरिकी सरकारी पद",
+      "angellist": "स्टार्टअप और टेक जॉब्स",
+      "ziprecruiter": "AI-संचालित नौकरी मिलान",
+      "monster": "करियर संसाधन और नौकरियां"
+    },
+    "tipsTitle": "करियर सफलता युक्तियाँ",
+    "tipsSubtitle": "अमेरिका में रोजगार चाहने वाले अंतर्राष्ट्रीय छात्रों के लिए आवश्यक रणनीतियां",
+    "tips": {
+      "networking": {
+        "title": "अपना नेटवर्क बनाएं",
+        "desc": "करियर मेलों में भाग लें, पेशेवर संघों में शामिल हों, और अपने पेशेवर नेटवर्क का विस्तार करने के लिए पूर्व छात्रों से जुड़ें।"
+      },
+      "resume": {
+        "title": "अपना रिज्यूमे परफेक्ट करें",
+        "desc": "लक्षित पदों के लिए प्रासंगिक उपलब्धियों, कौशल और मापनीय परिणामों को उजागर करने वाला अमेरिकी शैली का रिज्यूमे बनाएं।"
+      },
+      "skills": {
+        "title": "मांग में कौशल विकसित करें",
+        "desc": "तकनीकी कौशल, संचार क्षमताओं और उद्योग-विशिष्ट ज्ञान पर ध्यान केंद्रित करें जो अमेरिकी नियोक्ता महत्व देते हैं।"
+      },
+      "interview": {
+        "title": "साक्षात्कार में महारत हासिल करें",
+        "desc": "सामान्य साक्षात्कार प्रश्नों, व्यवहारिक साक्षात्कारों और केस स्टडी का अभ्यास करें। साक्षात्कारकर्ताओं के लिए विचारशील प्रश्न तैयार करें।"
+      },
+      "linkedin": {
+        "title": "LinkedIn प्रोफाइल को अनुकूलित करें",
+        "desc": "भर्तीकर्ताओं को आकर्षित करने के लिए कीवर्ड, सिफारिशों और सक्रिय जुड़ाव के साथ एक पेशेवर प्रोफ़ाइल बनाएं।"
+      },
+      "timing": {
+        "title": "जल्दी शुरू करें",
+        "desc": "स्नातक होने से 6-9 महीने पहले नौकरी की खोज शुरू करें। कई कंपनियों के पास विशिष्ट अंतर्राष्ट्रीय भर्ती समयसीमा होती है।"
+      }
+    },
+    "notice": {
+      "title": "2024 अंतर्राष्ट्रीय छात्र नौकरी मेला",
+      "description": "अमेरिका में काम करने की तलाश में वैश्विक प्रतिभा से मिलें! 1:1 भर्ती परामर्श, वरिष्ठ रोजगार व्याख्यान, कंपनी ब्रीफिंग और विभिन्न कार्यक्रम आपका इंतजार कर रहे हैं।",
+      "cta": "और जानें"
+    },
+    "cta": {
+      "title": "अपना करियर शुरू करने के लिए तैयार हैं?",
+      "description": "पूर्ण समर्थन के साथ अमेरिका में अपनी पेशेवर यात्रा शुरू करें",
+      "signup": "अभी साइन अप करें",
+      "chat": "AI सलाहकार के साथ चैट करें"
+    }
   }
 }
