--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -359,5 +359,128 @@
       "planStudies": "留学計画",
       "askQuestions": "質問する"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "キャリアチャンス",
+      "title": "アメリカで働く",
+      "subtitle": "学業からキャリアへ - あなたの成功への道",
+      "description": "留学生がアメリカでキャリアを準備し、見つけるための就職情報と求職サービスを提供します。",
+      "cta": "始める",
+      "viewJobs": "求人を見る"
+    },
+    "sections": {
+      "employment": "アメリカでの雇用",
+      "system": "就労ビザ制度",
+      "internship": "インターンシップと経験",
+      "recruitment": "求人情報",
+      "platforms": "求職プラットフォーム",
+      "tips": "キャリアのコツ"
+    },
+    "mainTitle": "留学生キャリアサポート",
+    "mainSubtitle": "あなたの成功のための包括的な就職情報とキャリアサービス",
+    "categories": {
+      "employment": {
+        "title": "アメリカでの雇用",
+        "desc": "就職準備プロセスやキャリアガイダンスを含む、アメリカでの就職を目指す留学生のための必須情報。"
+      },
+      "foreignerSystem": {
+        "title": "就労ビザ制度",
+        "desc": "OPT、CPT、H-1Bビザ要件を含む、フルタイムおよびパートタイム雇用の資格情報を確認。"
+      },
+      "internship": {
+        "title": "ボランティアと業界経験",
+        "desc": "ボランティアやインターンシップを通じた文化交流と実践経験で達成の機会を創出。"
+      },
+      "recruitment": {
+        "title": "求人情報",
+        "desc": "LinkedIn、Indeed、大学キャリアセンターなど主要な就職プラットフォームを通じて仕事を見つけるお手伝いをします。"
+      }
+    },
+    "additionalTitle": "留学に関する詳細情報",
+    "additional": {
+      "scholarships": {
+        "title": "さまざまな奨学金サポート",
+        "desc": "留学生向けのアメリカ政府、企業、個別学校からの奨学金を確認。"
+      },
+      "consultation": {
+        "title": "AIオンライン相談",
+        "desc": "お問い合わせに迅速に対応いたします。"
+      },
+      "schoolSearch": {
+        "title": "大学と専攻を探す",
+        "desc": "大学名または専攻名で検索し、関心のある学校の情報を一目で確認。"
+      }
+    },
+    "stories": {
+      "title": "成功事例",
+      "subtitle": "アメリカで就職に成功した先輩から学ぶ",
+      "video1": {
+        "title": "2024年留学生向け就職フェア",
+        "description": "アメリカでの就職活動を支援する1対1キャリア相談。",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "先輩によるキャリアメンタリング",
+        "description": "様々な国からのメンターの生き生きとした就職ストーリーを聞く。",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "2024 GLOBAL TALENT FAIR",
+        "description": "1対1採用相談、先輩のキャリア講演、企業採用説明会など。",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "求職プラットフォーム",
+    "platformsSubtitle": "アメリカの主要就職プラットフォームで仕事の機会を見つける",
+    "platforms": {
+      "linkedin": "プロフェッショナルネットワーキングと求職",
+      "indeed": "包括的な求人リスト",
+      "glassdoor": "企業レビューと給与情報",
+      "handshake": "大学キャリアサービス",
+      "usajobs": "米国政府職",
+      "angellist": "スタートアップとテック系求人",
+      "ziprecruiter": "AI駆動の求人マッチング",
+      "monster": "キャリアリソースと求人"
+    },
+    "tipsTitle": "キャリア成功のコツ",
+    "tipsSubtitle": "アメリカで就職を目指す留学生のための必須戦略",
+    "tips": {
+      "networking": {
+        "title": "ネットワークを構築する",
+        "desc": "キャリアフェアに参加し、専門協会に加入し、卒業生とつながってプロフェッショナルネットワークを拡大。"
+      },
+      "resume": {
+        "title": "履歴書を完璧にする",
+        "desc": "目標職位に関連する成果、スキル、定量的な結果を強調したアメリカンスタイルの履歴書を作成。"
+      },
+      "skills": {
+        "title": "需要のあるスキルを開発する",
+        "desc": "アメリカの雇用主が重視する技術スキル、コミュニケーション能力、業界固有の知識に焦点を当てる。"
+      },
+      "interview": {
+        "title": "面接をマスターする",
+        "desc": "一般的な面接質問、行動面接、ケーススタディを練習。面接官への質問を準備。"
+      },
+      "linkedin": {
+        "title": "LinkedInプロフィールを最適化する",
+        "desc": "キーワード、推薦、積極的な参加を含むプロフェッショナルプロフィールを作成して採用担当者を惹きつける。"
+      },
+      "timing": {
+        "title": "早めに開始する",
+        "desc": "卒業の6〜9ヶ月前に就職活動を始める。多くの企業には特定の国際採用スケジュールがある。"
+      }
+    },
+    "notice": {
+      "title": "2024年留学生向け就職フェア",
+      "description": "アメリカで働くことを目指すグローバル人材と出会おう！1対1採用相談、先輩就職講演、企業説明会、様々なプログラムがお待ちしています。",
+      "cta": "詳しく見る"
+    },
+    "cta": {
+      "title": "キャリアをスタートする準備はできましたか？",
+      "description": "完全なサポートでアメリカでのプロフェッショナルな旅を始めましょう",
+      "signup": "今すぐ登録",
+      "chat": "AIアドバイザーとチャット"
+    }
   }
 }
