--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -613,5 +613,128 @@
       "planStudies": "유학 계획하기",
       "askQuestions": "질문하기"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "취업 기회",
+      "title": "미국에서 일하기",
+      "subtitle": "학업에서 취업으로 - 성공을 향한 여정",
+      "description": "유학생들의 취업준비 정보를 안내하고 일자리를 찾을 수 있도록 취업 관련 서비스를 제공하고 있습니다.",
+      "cta": "시작하기",
+      "viewJobs": "채용 정보 보기"
+    },
+    "sections": {
+      "employment": "미국 취업",
+      "system": "취업 비자 제도",
+      "internship": "인턴십 & 경험",
+      "recruitment": "채용 정보",
+      "platforms": "구인 플랫폼",
+      "tips": "취업 팁"
+    },
+    "mainTitle": "유학생 취업 지원",
+    "mainSubtitle": "성공적인 미국 취업을 위한 종합 정보와 서비스",
+    "categories": {
+      "employment": {
+        "title": "미국에서의 취업",
+        "desc": "미국에서 취업을 희망하는 유학생들에게 취업준비 과정에 필요한 정보를 제공해 드리고 있습니다."
+      },
+      "foreignerSystem": {
+        "title": "외국인 취업제도",
+        "desc": "미국의 풀타임, 파트타임 유형에 따른 OPT, CPT, H-1B 비자 등 취업 자격 정보를 확인하세요."
+      },
+      "internship": {
+        "title": "자원봉사 및 산업 경험",
+        "desc": "자원봉사를 통한 문화 교류, 실질적인 경험으로 성취의 기회를 만들어 보세요."
+      },
+      "recruitment": {
+        "title": "채용 정보",
+        "desc": "LinkedIn, Indeed, 대학 취업센터 등 주요 채용 정보 플랫폼을 통해 일자리를 찾는데 도움을 드리고 있습니다."
+      }
+    },
+    "additionalTitle": "더 알아보는 유학 정보",
+    "additional": {
+      "scholarships": {
+        "title": "다양한 장학금 지원",
+        "desc": "미국 정부, 기업 및 각 학교별 유학생을 위한 장학금제도를 확인하세요."
+      },
+      "consultation": {
+        "title": "AI Kori 온라인 상담",
+        "desc": "궁금한 사항을 문의 주시면 빠르게 답변드리고 있습니다."
+      },
+      "schoolSearch": {
+        "title": "원하는 학과, 대학 찾기",
+        "desc": "대학 또는 전공 이름으로 검색하시면 관심있는 학교 정보를 한눈에 찾아 보실 수 있습니다."
+      }
+    },
+    "stories": {
+      "title": "성공 스토리",
+      "subtitle": "미국에서 성공적으로 취업한 선배들의 이야기를 들어보세요",
+      "video1": {
+        "title": "2024 외국인 유학생을 위한 찾아가는 방문 상담",
+        "description": "미국에서의 취업활동을 지원하는 1:1 방문 상담",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "선배에게 듣는 취업 멘토링 특강",
+        "description": "다양한 국가 출신 멘토들의 생생한 취업 스토리를 들을 수 있습니다.",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "2024 GLOBAL TALENT FAIR",
+        "description": "기업과 유학생 1:1 채용 상담, 선배들의 취업특강, 기업 채용설명회 등 다양한 프로그램을 만나실 수 있습니다.",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "구인 플랫폼",
+    "platformsSubtitle": "주요 미국 채용 플랫폼을 통해 일자리를 찾아보세요",
+    "platforms": {
+      "linkedin": "전문가 네트워킹 및 구직",
+      "indeed": "종합 채용 정보",
+      "glassdoor": "기업 리뷰 및 연봉 정보",
+      "handshake": "대학 취업 서비스",
+      "usajobs": "미국 정부 채용",
+      "angellist": "스타트업 및 기술 일자리",
+      "ziprecruiter": "AI 기반 일자리 매칭",
+      "monster": "취업 리소스 및 일자리"
+    },
+    "tipsTitle": "취업 성공 팁",
+    "tipsSubtitle": "미국 취업을 준비하는 유학생을 위한 필수 전략",
+    "tips": {
+      "networking": {
+        "title": "네트워크 구축",
+        "desc": "취업 박람회 참석, 전문가 협회 가입, 동문 연결을 통해 전문 네트워크를 확장하세요."
+      },
+      "resume": {
+        "title": "완벽한 이력서 작성",
+        "desc": "목표 직무와 관련된 성과, 기술, 정량화 가능한 결과를 강조하는 미국식 이력서를 작성하세요."
+      },
+      "skills": {
+        "title": "수요 높은 기술 개발",
+        "desc": "미국 고용주들이 중요하게 여기는 기술 능력, 커뮤니케이션 능력, 산업별 지식에 집중하세요."
+      },
+      "interview": {
+        "title": "인터뷰 마스터",
+        "desc": "일반적인 인터뷰 질문, 행동 면접, 케이스 스터디를 연습하세요. 면접관을 위한 질문도 준비하세요."
+      },
+      "linkedin": {
+        "title": "LinkedIn 프로필 최적화",
+        "desc": "키워드, 추천사, 적극적인 참여가 포함된 전문 프로필을 만들어 리크루터의 관심을 끄세요."
+      },
+      "timing": {
+        "title": "조기 시작",
+        "desc": "졸업 6-9개월 전에 구직을 시작하세요. 많은 기업들이 특정 국제 채용 일정을 가지고 있습니다."
+      }
+    },
+    "notice": {
+      "title": "2024 외국인 유학생 취업 박람회",
+      "description": "미국에서 일할 글로벌 인재 모여라! 기업과 유학생 1:1 채용 상담, 선배들의 취업특강, 기업 채용설명회 등의 다양한 프로그램을 만나실 수 있습니다.",
+      "cta": "더 알아보기"
+    },
+    "cta": {
+      "title": "커리어를 시작할 준비가 되셨나요?",
+      "description": "완벽한 지원으로 미국에서의 전문 경력을 시작하세요",
+      "signup": "지금 가입하기",
+      "chat": "AI 상담원과 채팅"
+    }
   }
 }
