--- a/src/i18n/locales/mn.json
+++ b/src/i18n/locales/mn.json
@@ -359,5 +359,128 @@
       "planStudies": "Сургуулиа төлөвлөх",
       "askQuestions": "Асуулт асуух"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "Карьерын боломжууд",
+      "title": "АНУ-д ажиллах",
+      "subtitle": "Академик боловсролоос карьер хүртэл - Таны амжилтын зам",
+      "description": "Бид олон улсын оюутнуудад АНУ-д карьер бэлтгэх, олоход нь туслах ажил эрхлэлтийн мэдээлэл болон ажил хайх үйлчилгээг үзүүлдэг.",
+      "cta": "Эхлүүлэх",
+      "viewJobs": "Ажлын зарыг үзэх"
+    },
+    "sections": {
+      "employment": "АНУ-д ажил эрхлэлт",
+      "system": "Ажлын визийн систем",
+      "internship": "Дадлага & Туршлага",
+      "recruitment": "Ажлын зарууд",
+      "platforms": "Ажил хайх платформууд",
+      "tips": "Карьерын зөвлөмжүүд"
+    },
+    "mainTitle": "Олон улсын оюутны карьерын дэмжлэг",
+    "mainSubtitle": "Таны амжилтад зориулсан иж бүрэн ажил эрхлэлтийн мэдээлэл болон карьерын үйлчилгээ",
+    "categories": {
+      "employment": {
+        "title": "АНУ-д ажил эрхлэлт",
+        "desc": "АНУ-д ажил хайж буй олон улсын оюутнуудад зориулсан чухал мэдээлэл, ажилд бэлтгэх үйл явц болон карьерын удирдамж."
+      },
+      "foreignerSystem": {
+        "title": "Ажлын визийн систем",
+        "desc": "OPT, CPT, H-1B визийн шаардлагыг багтаасан бүтэн болон хагас цагийн ажиллах эрхийн мэдээллийг шалгаарай."
+      },
+      "internship": {
+        "title": "Сайн дурын ажил & Салбарын туршлага",
+        "desc": "Сайн дурын ажил болон дадлагын ажлаар дамжуулан соёлын солилцоо болон практик туршлагаар амжилтын боломжуудыг бүтээгээрэй."
+      },
+      "recruitment": {
+        "title": "Ажлын зарууд",
+        "desc": "Бид таньд LinkedIn, Indeed болон их сургуулийн карьерын төвүүд зэрэг гол ажил эрхлэлтийн платформуудаар дамжуулан ажил олоход туслана."
+      }
+    },
+    "additionalTitle": "Гадаадад суралцах нэмэлт мэдээлэл",
+    "additional": {
+      "scholarships": {
+        "title": "Олон төрлийн тэтгэлгийн дэмжлэг",
+        "desc": "Олон улсын оюутнуудад зориулсан АНУ-ын засгийн газар, корпораци болон тус тусын сургуулиудын тэтгэлгүүдийг шалгаарай."
+      },
+      "consultation": {
+        "title": "AI онлайн зөвлөгөө",
+        "desc": "Бид таны асуултад хурдан хариулдаг."
+      },
+      "schoolSearch": {
+        "title": "Их сургууль & Мэргэжлээ ол",
+        "desc": "Их сургууль эсвэл мэргэжлийн нэрээр хайж, сонирхож буй сургуулийн мэдээллийг нэгэн зэрэг олоорой."
+      }
+    },
+    "stories": {
+      "title": "Амжилтын түүхүүд",
+      "subtitle": "АНУ-д амжилттай ажилд орсон ахлах оюутнуудаас суралцаарай",
+      "video1": {
+        "title": "2024 оны Олон улсын оюутнуудын Ажлын яармарк",
+        "description": "АНУ-д ажил эрхлэх үйл ажиллагааг дэмжсэн 1:1 карьерын зөвлөгөө.",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "Ахлах оюутнуудын карьерын зөвлөгөө",
+        "description": "Өөр өөр улсаас ирсэн зөвлөх багш нарын амьд ажил эрхлэлтийн түүхүүдийг сонсоорой.",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "2024 ДЭЛХИЙН АВЪЯАСЛАГ ХҮМҮҮСИЙН ЯАРМАРК",
+        "description": "1:1 ажилд авах зөвлөгөө, ахлах оюутнуудын карьерын лекц, компанийн ажилд авах танилцуулга болон бусад.",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "Ажил хайх платформууд",
+    "platformsSubtitle": "АНУ-ын тэргүүлэх ажил эрхлэлтийн платформуудаар дамжуулан ажлын боломжуудыг олоорой",
+    "platforms": {
+      "linkedin": "Мэргэжлийн сүлжээ болон ажил хайх",
+      "indeed": "Иж бүрэн ажлын жагсаалт",
+      "glassdoor": "Компанийн үнэлгээ болон цалин",
+      "handshake": "Их сургуулийн карьерын үйлчилгээ",
+      "usajobs": "АНУ-ын засгийн газрын албан тушаал",
+      "angellist": "Startup болон технологийн ажлууд",
+      "ziprecruiter": "AI-ээр удирддаг ажлын тааруулга",
+      "monster": "Карьерын нөөц болон ажлууд"
+    },
+    "tipsTitle": "Карьерт амжилттай болох зөвлөмжүүд",
+    "tipsSubtitle": "АНУ-д ажил хайж буй олон улсын оюутнуудад зориулсан чухал стратегиуд",
+    "tips": {
+      "networking": {
+        "title": "Өөрийн сүлжээгээ бүтээ",
+        "desc": "Карьерын яармаркт оролцож, мэргэжлийн холбоодод элсэж, төгсөгчидтэй холбогдож мэргэжлийн сүлжээгээ өргөжүүлээрэй."
+      },
+      "resume": {
+        "title": "Анкетаа төгс болго",
+        "desc": "Зорилтот албан тушаалд хамааралтай амжилт, чадвар болон тоо хэмжээгээр илэрхийлэгдэх үр дүнг онцолсон америк загварын анкет бүтээгээрэй."
+      },
+      "skills": {
+        "title": "Эрэлттэй чадваруудыг хөгжүүл",
+        "desc": "АНУ-ын ажил олгогчдын үнэлдэг техникийн чадвар, харилцааны чадвар болон салбарын тусгай мэдлэгт анхаараарай."
+      },
+      "interview": {
+        "title": "Ярилцлагыг эзэмшээрэй",
+        "desc": "Нийтлэг ярилцлагын асуултууд, зан үйлийн ярилцлага болон кейс судалгаануудыг дадлагажуулаарай. Ярилцлага авагчдад зориулсан бодолтой асуултуудыг бэлтгээрэй."
+      },
+      "linkedin": {
+        "title": "LinkedIn профайлаа оновчтой болго",
+        "desc": "Түлхүүр үгс, санал болгох болон идэвхтэй оролцоо бүхий мэргэжлийн профайл үүсгэж, ажилд авагчдын анхаарлыг татаарай."
+      },
+      "timing": {
+        "title": "Эрт эхлээрэй",
+        "desc": "Төгсөхөөс 6-9 сарын өмнө ажил хайж эхлээрэй. Олон компаниуд тодорхой олон улсын ажилд авах хуваарьтай байдаг."
+      }
+    },
+    "notice": {
+      "title": "2024 оны Олон улсын оюутны Ажлын яармарк",
+      "description": "АНУ-д ажиллахыг эрэлхийлж буй дэлхийн авъяаслаг хүмүүстэй уулзаарай! 1:1 ажилд авах зөвлөгөө, ахлах оюутны ажил эрхлэлтийн лекц, компанийн танилцуулга болон төрөл бүрийн хөтөлбөрүүд таныг хүлээж байна.",
+      "cta": "Дэлгэрэнгүй үзэх"
+    },
+    "cta": {
+      "title": "Карьераа эхлүүлэхэд бэлэн үү?",
+      "description": "Бүрэн дэмжлэгтэйгээр АНУ-д мэргэжлийн аялалаа эхлүүлээрэй",
+      "signup": "Одоо бүртгүүлэх",
+      "chat": "AI зөвлөхтэй чатлах"
+    }
   }
 }
