--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -349,5 +349,128 @@
       "planStudies": "Спланировать учёбу",
       "askQuestions": "Задать вопросы"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "Карьерные Возможности",
+      "title": "Работа в США",
+      "subtitle": "От учёбы к карьере - Ваш путь к успеху",
+      "description": "Мы предоставляем информацию о трудоустройстве и услуги по поиску работы, чтобы помочь иностранным студентам подготовиться и найти карьеру в США.",
+      "cta": "Начать",
+      "viewJobs": "Посмотреть Вакансии"
+    },
+    "sections": {
+      "employment": "Трудоустройство в США",
+      "system": "Система Рабочих Виз",
+      "internship": "Стажировка и Опыт",
+      "recruitment": "Вакансии",
+      "platforms": "Платформы Поиска Работы",
+      "tips": "Советы по Карьере"
+    },
+    "mainTitle": "Поддержка Карьеры Иностранных Студентов",
+    "mainSubtitle": "Полная информация о трудоустройстве и карьерные услуги для вашего успеха",
+    "categories": {
+      "employment": {
+        "title": "Трудоустройство в США",
+        "desc": "Важная информация для иностранных студентов, ищущих работу в США, включая процессы подготовки к работе и карьерное руководство."
+      },
+      "foreignerSystem": {
+        "title": "Система Рабочих Виз",
+        "desc": "Проверьте информацию о праве на полную и частичную занятость, включая требования к визам OPT, CPT и H-1B."
+      },
+      "internship": {
+        "title": "Волонтёрство и Отраслевой Опыт",
+        "desc": "Создавайте возможности для достижений через культурный обмен и практический опыт через волонтёрство и стажировки."
+      },
+      "recruitment": {
+        "title": "Вакансии",
+        "desc": "Мы помогаем вам найти работу через основные платформы трудоустройства, включая LinkedIn, Indeed и университетские центры карьеры."
+      }
+    },
+    "additionalTitle": "Дополнительная Информация об Обучении за Рубежом",
+    "additional": {
+      "scholarships": {
+        "title": "Различная Стипендиальная Поддержка",
+        "desc": "Проверьте стипендии от правительства США, корпораций и отдельных школ для иностранных студентов."
+      },
+      "consultation": {
+        "title": "Онлайн-Консультация с ИИ Кори",
+        "desc": "Мы быстро отвечаем на ваши запросы."
+      },
+      "schoolSearch": {
+        "title": "Найдите Свой Университет и Специальность",
+        "desc": "Ищите по названию университета или специальности, чтобы найти информацию о школах, представляющих интерес, с первого взгляда."
+      }
+    },
+    "stories": {
+      "title": "Истории Успеха",
+      "subtitle": "Учитесь у старших, которые успешно нашли работу в США",
+      "video1": {
+        "title": "Ярмарка Вакансий для Иностранных Студентов 2024",
+        "description": "Индивидуальные карьерные консультации в поддержку трудоустройства в США.",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "Карьерное Наставничество от Старших",
+        "description": "Послушайте живые истории трудоустройства от менторов из разных стран.",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "ЯРМАРКА ГЛОБАЛЬНЫХ ТАЛАНТОВ 2024",
+        "description": "Индивидуальные консультации по найму, карьерные лекции старших, брифинги компаний по найму и многое другое.",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "Платформы Поиска Работы",
+    "platformsSubtitle": "Найдите возможности трудоустройства через ведущие американские платформы занятости",
+    "platforms": {
+      "linkedin": "Профессиональные сети и поиск работы",
+      "indeed": "Полные списки вакансий",
+      "glassdoor": "Отзывы о компаниях и зарплаты",
+      "handshake": "Университетские карьерные услуги",
+      "usajobs": "Позиции в правительстве США",
+      "angellist": "Вакансии в стартапах и технологиях",
+      "ziprecruiter": "Подбор работы на основе ИИ",
+      "monster": "Карьерные ресурсы и вакансии"
+    },
+    "tipsTitle": "Советы по Успешной Карьере",
+    "tipsSubtitle": "Основные стратегии для иностранных студентов, ищущих работу в США",
+    "tips": {
+      "networking": {
+        "title": "Постройте Свою Сеть",
+        "desc": "Посещайте ярмарки вакансий, вступайте в профессиональные ассоциации и общайтесь с выпускниками, чтобы расширить свою профессиональную сеть."
+      },
+      "resume": {
+        "title": "Усовершенствуйте Своё Резюме",
+        "desc": "Создайте резюме в американском стиле, подчеркивающее достижения, навыки и измеримые результаты, относящиеся к целевым позициям."
+      },
+      "skills": {
+        "title": "Развивайте Востребованные Навыки",
+        "desc": "Сосредоточьтесь на технических навыках, коммуникативных способностях и отраслевых знаниях, ценимых американскими работодателями."
+      },
+      "interview": {
+        "title": "Освойте Собеседования",
+        "desc": "Практикуйте распространённые вопросы на собеседованиях, поведенческие интервью и кейс-стади. Подготовьте продуманные вопросы для интервьюеров."
+      },
+      "linkedin": {
+        "title": "Оптимизируйте Профиль LinkedIn",
+        "desc": "Создайте профессиональный профиль с ключевыми словами, рекомендациями и активным взаимодействием, чтобы привлечь рекрутеров."
+      },
+      "timing": {
+        "title": "Начинайте Рано",
+        "desc": "Начните поиск работы за 6-9 месяцев до окончания. У многих компаний есть специфические сроки для найма иностранцев."
+      }
+    },
+    "notice": {
+      "title": "Ярмарка Вакансий для Иностранных Студентов 2024",
+      "description": "Познакомьтесь с глобальными талантами, стремящимися работать в США! Индивидуальные консультации по найму, лекции старших о трудоустройстве, брифинги компаний и различные программы ждут вас.",
+      "cta": "Узнать Больше"
+    },
+    "cta": {
+      "title": "Готовы Начать Свою Карьеру?",
+      "description": "Начните свой профессиональный путь в США с полной поддержкой",
+      "signup": "Зарегистрироваться Сейчас",
+      "chat": "Чат с ИИ-Советником"
+    }
   }
 }
