--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -349,5 +349,128 @@
       "planStudies": "วางแผนการศึกษาของคุณ",
       "askQuestions": "ถามคำถาม"
     }
+  },
+  "workInUSA": {
+    "hero": {
+      "badge": "โอกาสในการทำงาน",
+      "title": "ทำงานในสหรัฐฯ",
+      "subtitle": "จากการศึกษาสู่อาชีพ - เส้นทางสู่ความสำเร็จของคุณ",
+      "description": "เราให้ข้อมูลการจ้างงานและบริการค้นหางานเพื่อช่วยนักเรียนต่างชาติเตรียมตัวและหางานในสหรัฐอเมริกา",
+      "cta": "เริ่มต้น",
+      "viewJobs": "ดูตำแหน่งงาน"
+    },
+    "sections": {
+      "employment": "การจ้างงานในสหรัฐฯ",
+      "system": "ระบบวีซ่าทำงาน",
+      "internship": "ฝึกงานและประสบการณ์",
+      "recruitment": "ตำแหน่งงานว่าง",
+      "platforms": "แพลตฟอร์มหางาน",
+      "tips": "เคล็ดลับอาชีพ"
+    },
+    "mainTitle": "การสนับสนุนอาชีพสำหรับนักเรียนต่างชาติ",
+    "mainSubtitle": "ข้อมูลการจ้างงานที่ครอบคลุมและบริการด้านอาชีพเพื่อความสำเร็จของคุณ",
+    "categories": {
+      "employment": {
+        "title": "การจ้างงานในสหรัฐฯ",
+        "desc": "ข้อมูลที่จำเป็นสำหรับนักเรียนต่างชาติที่กำลังหางานในสหรัฐอเมริกา รวมถึงกระบวนการเตรียมตัวหางานและคำแนะนำด้านอาชีพ"
+      },
+      "foreignerSystem": {
+        "title": "ระบบวีซ่าทำงาน",
+        "desc": "ตรวจสอบข้อมูลคุณสมบัติสำหรับการทำงานเต็มเวลาและนอกเวลา รวมถึงข้อกำหนดวีซ่า OPT, CPT และ H-1B"
+      },
+      "internship": {
+        "title": "อาสาสมัครและประสบการณ์ในอุตสาหกรรม",
+        "desc": "สร้างโอกาสในการประสบความสำเร็จผ่านการแลกเปลี่ยนวัฒนธรรมและประสบการณ์จริงผ่านการเป็นอาสาสมัครและการฝึกงาน"
+      },
+      "recruitment": {
+        "title": "ตำแหน่งงานว่าง",
+        "desc": "เราช่วยคุณหางานผ่านแพลตฟอร์มการจ้างงานหลักรวมถึง LinkedIn, Indeed และศูนย์อาชีพของมหาวิทยาลัย"
+      }
+    },
+    "additionalTitle": "ข้อมูลเพิ่มเติมเกี่ยวกับการเรียนต่อต่างประเทศ",
+    "additional": {
+      "scholarships": {
+        "title": "การสนับสนุนทุนการศึกษาที่หลากหลาย",
+        "desc": "ตรวจสอบทุนการศึกษาจากรัฐบาลสหรัฐฯ บริษัทและโรงเรียนแต่ละแห่งสำหรับนักเรียนต่างชาติ"
+      },
+      "consultation": {
+        "title": "ให้คำปรึกษาออนไลน์ด้วย AI Kori",
+        "desc": "เราตอบคำถามของคุณอย่างรวดเร็ว"
+      },
+      "schoolSearch": {
+        "title": "ค้นหามหาวิทยาลัยและสาขาวิชาของคุณ",
+        "desc": "ค้นหาตามชื่อมหาวิทยาลัยหรือสาขาวิชาเพื่อหาข้อมูลเกี่ยวกับโรงเรียนที่คุณสนใจได้ในทันที"
+      }
+    },
+    "stories": {
+      "title": "เรื่องราวความสำเร็จ",
+      "subtitle": "เรียนรู้จากรุ่นพี่ที่ประสบความสำเร็จในการหางานในสหรัฐฯ",
+      "video1": {
+        "title": "งานแสดงสินค้าหางานสำหรับนักเรียนต่างชาติ 2024",
+        "description": "คำปรึกษาด้านอาชีพแบบตัวต่อตัวสนับสนุนกิจกรรมการจ้างงานในสหรัฐฯ",
+        "url": "yw4zCtBrQp4"
+      },
+      "video2": {
+        "title": "การให้คำปรึกษาด้านอาชีพโดยรุ่นพี่",
+        "description": "ฟังเรื่องราวการจ้างงานที่มีชีวิตชีวาจากพี่เลี้ยงจากหลายประเทศ",
+        "url": "eJASTm-WcUM"
+      },
+      "video3": {
+        "title": "GLOBAL TALENT FAIR 2024",
+        "description": "คำปรึกษาการรับสมัครแบบตัวต่อตัว การบรรยายด้านอาชีพของรุ่นพี่ การบรรยายสรุปการรับสมัครของบริษัทและอื่นๆ",
+        "url": "P8c-j3Ox2tE"
+      }
+    },
+    "platformsTitle": "แพลตฟอร์มค้นหางาน",
+    "platformsSubtitle": "ค้นหาโอกาสในการทำงานผ่านแพลตฟอร์มการจ้างงานชั้นนำของสหรัฐฯ",
+    "platforms": {
+      "linkedin": "เครือข่ายมืออาชีพและการค้นหางาน",
+      "indeed": "รายชื่อตำแหน่งงานที่ครอบคลุม",
+      "glassdoor": "รีวิวบริษัทและเงินเดือน",
+      "handshake": "บริการด้านอาชีพของมหาวิทยาลัย",
+      "usajobs": "ตำแหน่งงานรัฐบาลสหรัฐฯ",
+      "angellist": "งานสตาร์ทอัพและเทคโนโลยี",
+      "ziprecruiter": "การจับคู่งานด้วย AI",
+      "monster": "ทรัพยากรด้านอาชีพและงาน"
+    },
+    "tipsTitle": "เคล็ดลับสู่ความสำเร็จในอาชีพ",
+    "tipsSubtitle": "กลยุทธ์ที่จำเป็นสำหรับนักเรียนต่างชาติที่กำลังหางานในสหรัฐฯ",
+    "tips": {
+      "networking": {
+        "title": "สร้างเครือข่ายของคุณ",
+        "desc": "เข้าร่วมงานแสดงสินค้าด้านอาชีพ เข้าร่วมสมาคมวิชาชีพ และเชื่อมต่อกับศิษย์เก่าเพื่อขยายเครือข่ายมืออาชีพของคุณ"
+      },
+      "resume": {
+        "title": "ทำให้เรซูเม่ของคุณสมบูรณ์แบบ",
+        "desc": "สร้างเรซูเม่แบบอเมริกันที่เน้นความสำเร็จ ทักษะ และผลลัพธ์ที่วัดได้ซึ่งเกี่ยวข้องกับตำแหน่งเป้าหมาย"
+      },
+      "skills": {
+        "title": "พัฒนาทักษะที่ต้องการ",
+        "desc": "มุ่งเน้นไปที่ทักษะทางเทคนิค ความสามารถในการสื่อสาร และความรู้เฉพาะอุตสาหกรรมที่นายจ้างในสหรัฐฯ ให้คุณค่า"
+      },
+      "interview": {
+        "title": "เชี่ยวชาญการสัมภาษณ์",
+        "desc": "ฝึกคำถามสัมภาษณ์ทั่วไป การสัมภาษณ์เชิงพฤติกรรม และกรณีศึกษา เตรียมคำถามที่มีความคิดสำหรับผู้สัมภาษณ์"
+      },
+      "linkedin": {
+        "title": "เพิ่มประสิทธิภาพโปรไฟล์ LinkedIn",
+        "desc": "สร้างโปรไฟล์มืออาชีพด้วยคีย์เวิร์ด คำแนะนำ และการมีส่วนร่วมที่กระตือรือร้นเพื่อดึงดูดนักสรรหา"
+      },
+      "timing": {
+        "title": "เริ่มต้นเร็ว",
+        "desc": "เริ่มหางาน 6-9 เดือนก่อนสำเร็จการศึกษา หลายบริษัทมีกำหนดเวลาการจ้างงานนานาชาติเฉพาะ"
+      }
+    },
+    "notice": {
+      "title": "งานแสดงสินค้าหางานสำหรับนักเรียนต่างชาติ 2024",
+      "description": "พบกับผู้มีความสามารถระดับโลกที่กำลังมองหาการทำงานในสหรัฐฯ! คำปรึกษาการรับสมัครแบบตัวต่อตัว การบรรยายด้านการจ้างงานของรุ่นพี่ การบรรยายสรุปของบริษัท และโปรแกรมต่างๆ รอคุณอยู่",
+      "cta": "เรียนรู้เพิ่มเติม"
+    },
+    "cta": {
+      "title": "พร้อมที่จะเริ่มต้นอาชีพของคุณหรือยัง?",
+      "description": "เริ่มต้นเส้นทางอาชีพของคุณในสหรัฐฯ ด้วยการสนับสนุนที่สมบูรณ์",
+      "signup": "ลงทะเบียนตอนนี้",
+      "chat": "แชทกับที่ปรึกษา AI"
+    }
   }
 }
